--- a/package.json
+++ b/package.json
@@ -1,18 +1,19 @@
 {
-  "name": "front_end_video",
+  "name": "video_manager_frontend",
   "version": "0.1.0",
   "private": true,
   "dependencies": {
+    "@emotion/react": "^11.14.0",
+    "@emotion/styled": "^11.14.0",
+    "@mui/icons-material": "^6.2.1",
+    "@mui/material": "^6.2.1",
     "axios": "^1.7.9",
-    "boxicons": "^2.1.4",
     "cra-template": "1.2.0",
-    "front_end_video": "file:",
     "js-cookie": "^3.0.5",
     "react": "^19.0.0",
     "react-dom": "^19.0.0",
     "react-router-dom": "^7.1.0",
     "react-scripts": "5.0.1",
-    "react-toastify": "^11.0.2",
     "web-vitals": "^4.2.4"
   },
   "scripts": {
